2021/07/26 Visenri

    * sdas/aspdk13/pdk13mch.c
      sdas/aspdk13/pdk13pst.c
      sdas/aspdk14/pdk14mch.c
      sdas/aspdk14/pdk14pst.c
      sdas/aspdk15/pdk15mch.c
      sdas/aspdk15/pdk15pst.c
      sdas/aspdk16/pdk16mch.c
      sdas/aspdk16/pdk16pst.c
      sdas/aspdk/pdk.h
      sdas/aspdk/pdkadr.c
      sdas/aspdk/pdkmch.c
      Added assembler support for new pdk .io mnemonics (bug #3259).

    * src/pdk/gen.c
      src/pdk/main.c
      src/pdk/peep.c
      src/pdk/peeph.def
      Updated compiler generated assembly and rules according to new pdk .io mnemonics

2021/07/26 Visenri

    * sim/ucsim/pdk.src/inst.cc
    * sim/ucsim/pdk.src/instcl.h
    * sim/ucsim/sim.src/sim.cc
      Added support for stack overflow detection.
      Fixed wrong order of output to stdout when program is stopped.
      Added newline to make sure we get a separate line for the "Stop"

2021-07-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y,
	* src/SDCCsymt.c,
	* src/SDCCsymt.h: fix bugs #3212 and #3213

2021-07-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncArgs): minor correction to #3260 bug fix

2021-07-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncPtrArgs,processFuncArgs),
	* src/SDCCsymt.h,
	* src/SDCCmem.c (allocVariables): fix bug #3260
	* support/regression/tests/bug-3260.c: added test

2021-07-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fix bug #2546

2021-07-16 Visenri

    * src/SDCC.lex
      src/SDCC.y
      Added builtins: "__builtin_rlc", "__builtin_rrc" & "__builtin_swap".
      These functions will allow swap and rotate operations with volatile variables.
    * src/SDCCast.c
      src/SDCCsymt.c
      src/SDCCsymt.h
      src/SDCCval.c
      src/SDCCval.h
      Support for conditional type reduction (patch #392) for optimized values to 0.
      Fixed size calculation for ptrdiff type.